fix: iconos sociales en nav, visibilidad de carrusel y fondo global de detalles

--- a/src/features/projects/pages/ProjectDetailsPage.css
+++ b/src/features/projects/pages/ProjectDetailsPage.css
@@ -1,4 +1,4 @@
-﻿.project-details-page {
+.project-details-page {
   position: relative;
   min-height: 100vh;
   width: 100vw;
@@ -109,7 +109,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 450px;
+  height: 450px;
   width: 100%;
 }
 
